# pgn-tokenizer

./: .gitignore  CHANGELOG.md  README.md  eslint.config.js  package.json  pyproject.toml  rollup.config.mjs  tsconfig.json
.github/workflows/: publish.yml  release.yml  test.yml
docs/: CONTRIBUTING.md
scripts/: prepare-dataset-for-hf.py  publish-to-hf.py  train.py
src/pgn_tokenizer/: __init__.py  constants.py  pgn-tokenizer.json
src/pgn_tokenizer/config/: pgn-tokenizer.json
templates/: dataset-readme.md  model-readme.md
