[project]
name = "pgn-tokenizer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Eric allen", email = "eric@ericrallen.dev" }
]
requires-python = ">=3.13"
dependencies = [
    "transformers>=4.48.1",
]

[project.scripts]
pgn-tokenizer = "pgn_tokenizer:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "datasets>=3.2.0",
    "kagglehub>=0.3.6",
    "polars>=1.20.0",
    "tokenizers>=0.21.0",
]
