[project]
name = "pgn-tokenizer"
version = "0.1.5"
description = "A byte pair encoding tokenizer for chess portable game notation (PGN)"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Eric allen", email = "eric@ericrallen.dev" }
]
requires-python = ">=3.10"
dependencies = [
    "transformers>=4.48.1",
]
keywords = ["chess", "tokenizer", "pgn", "byte pair encoding", "bpe", "llm", "tokenizers"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Build Tools",
  "Topic :: Games/Entertainment :: Board Games",
  "Topic :: Utilities",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]

[project.urls]
Homepage = "https://github.com/DVDAGames/pgn-tokenizer"
Documentation = "https://github.com/DVDAGames/pgn-tokenizer"
Repository = "https://github.com/DVDAGames/pgn-tokenizer.git"
Issues = "https://github.com/DVDAGames/pgn-tokenizer.git/issues"
Changelog = "https://github.com/DVDAGames/pgn-tokenizer.git/blob/master/CHANGELOG.md"


[project.scripts]
pgn-tokenizer = "pgn_tokenizer:main"


[semantic_release]
version_variables = [
    "src/pgn_tokenizer/__init__.py:__version__",
    "scripts/publish-to-hf.py:__version__",
]
version_toml = [
    "pyproject.toml:project.version",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "black>=24.10.0",
    "datasets>=3.2.0",
    "jinja2>=3.1.5",
    "kagglehub>=0.3.6",
    "mypy>=1.14.1",
    "polars>=1.20.0",
    "pre-commit>=4.1.0",
    "pytest>=8.3.5",
    "ruff>=0.9.3",
    "tokenizers>=0.21.0",
]

[tool.ruff]
line-length = 120
target-version = "py311"
ignore = [
    "D100",   # ignore missing docs
    "E402",   # false positives for local imports
    "E501",   # line too long
    "TRY003", # external messages in exceptions are too verbose
]
